--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "d3": "^6.5.0",
+    "d3-svg-legend": "^2.25.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsdom": "^16.4.0"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
     "eslint": "^7.20.0",
     "nodemon": "^2.0.7"
   }
